# edith

./: CMakeLists.txt  LICENSE  README  README.md
cmake/Modules/: FindProtocolBuffers.cmake  FindSnappy.cmake
examples/: death_recording.cpp
src/: CMakeLists.txt  bitstream.cpp  bitstream.h  convert.py  death_recording_visitor.h  debug.cpp  debug.h  decoder.cpp  decoder.h  demo.cpp  demo.h  dictionary_list.h  edith.cpp  edith.h  entity.cpp  entity.h  main.cpp  noisy_visitor.h  property.cpp  property.h  resizable_array.h  state.cpp  state.h  value.cpp  value.h  visitor.h
src/generated_proto/: ai_activity.pb.cc  ai_activity.pb.h  demo.pb.cc  demo.pb.h  dota_commonmessages.pb.cc  dota_commonmessages.pb.h  dota_modifiers.pb.cc  dota_modifiers.pb.h  dota_usermessages.pb.cc  dota_usermessages.pb.h  netmessages.pb.cc  netmessages.pb.h  usermessages.pb.cc  usermessages.pb.h
src/proto/: netmessages.proto
